--- a/style.css
+++ b/style.css
@@ -100,13 +100,17 @@ line-height: 70px;
 }
 .card{
     padding:50px;
-    border: 2px solid gray;
-    height: 80%;
+    /* border: 2px solid gray; */
+    /* height: 80%; */
     text-align: center;
     height: 150px;
     width: 150px;
    background-color: #F8FFFB;
    border-radius: 10px;
+   line-height: 25px;
+   align-items: center;
+   /* gap:20px */
+
 
    
 }
@@ -115,7 +119,8 @@ line-height: 70px;
 .card:hover{
     border-radius: 10px;
 background: #FFF;
-box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.10);
+box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 5);
+border:none;
 
 }
 .main-content{
@@ -129,7 +134,42 @@ box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.10);
     width: 80%;
     margin:auto;
 }
+.courses-section h1{
+    text-align: center;
+    font-size: 50px;
+}
+.courses-content img{
+    width: 300px;
 
+}
+.courses-content h3{
+   font-size: 14px;
+   margin: none;
+   line-height: 0px;
+}
+.courses-content{
+    padding: 20px;
+    /* border:9px solid black */
+    border-radius: 18px;
+background: #FFF;
+box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.10);
+
+}
+.courses{
+    display: flex;
+    justify-content: space-around;
+    gap:10px;
+    
+}
+
+
+
+
+
+.dk{
+    display: flex;
+    justify-content: space-between;
+}
 
 
 
@@ -196,7 +236,9 @@ box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.10);
         line-height: 25px;
         gap:10px;
     }
-
+    .courses{
+        flex-direction: column;
+    }
 
 
 
