--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 
 
-/* *{
+*{
     margin:0px;
     padding: 0px;
-} */
+}
 .nav-section{
     display: flex;
     justify-content: space-around;
@@ -43,6 +43,7 @@
     gap: 10px;  
     color: white;
     font-weight: bold;
+    
 }
 
 /* end of nav section */
@@ -56,6 +57,7 @@ button{
     border:none;
     color:white;
     font-weight: bold;
+   margin-top: 20px;
 }
 .banar-section{
     display: flex;
@@ -94,7 +96,7 @@ line-height: 70px;
     width: 400px;
 }
 
-.card img{
+.card> img{
     width: 60px;
     
 }
@@ -139,13 +141,13 @@ border:none;
     font-size: 50px;
 }
 .courses-content img{
-    width: 300px;
+    width: 250px;
 
 }
 .courses-content h3{
    font-size: 14px;
    margin: none;
-   line-height: 0px;
+   line-height: 30px;
 }
 .courses-content{
     padding: 20px;
@@ -164,11 +166,87 @@ box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.10);
 
 
 
-
-
 .dk{
     display: flex;
     justify-content: space-between;
+}
+
+.man-section{
+    width: 70%;
+    margin:auto;
+}
+.man-title h2{
+    text-align: center;
+    font-size: 48px;
+    margin-top: 80px;
+
+}
+.man-conttent{
+    display: flex;
+    justify-content: space-between;
+    gap:80px;
+    align-items: center;
+}
+.man-conttent>img{
+    width: 150px;
+}
+
+.footer-section{
+    background-color: #000;
+    /* height: 360px; */
+    width: 100%;
+    margin-top: 100px;
+}
+
+
+.footer-content{
+    width: 80%;
+    margin:auto;
+    padding:30px;
+    display: flex;
+    
+}
+
+.footer-left p{
+    color: #FFF;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 187.5% */
+    width: 50%;
+
+}
+
+.footer-right{
+    display: flex;
+justify-content: space-between;
+gap:40px;
+color:white
+}
+
+.footer-right b{
+    color: #FFF;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 30px; /* 187.5% */
+}
+.footer-right p{
+    color: #FFF;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+.coppt{
+    color: white;
+   width: 80%;
+   /* margin-left: 473px; */
+  
 }
 
 
@@ -184,13 +262,8 @@ box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.10);
 
 
 
-
-
-
-
-
 @media screen and (max-width: 576px){
-    .nav-section, .service-section ul{
+    .nav-section, .service-section ul,.man-conttent, .footer-right,.footer-content{
         flex-direction: column;
         gap:20px;
         
@@ -239,7 +312,15 @@ box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.10);
     .courses{
         flex-direction: column;
     }
+    /* .footer-content{
+        flex-direction: column;
 
-
+    } */
+    /* .footer-right{
+        flex-direction: column
+    } */
+    .coppt{
+        text-align: center;
+    }
 
 }
